@@ -8,7 +8,7 @@ use version; our $VERSION = qv( sprintf '0.10.%d', q$Rev$ =~ /\d+/gmx );
 
 use Exception::Class
    'File::DataClass::Exception::Base' => {
-      fields => [ qw(args leader out rv) ] };
+      fields => [ qw(args class leader out rv) ] };
 
 use base qw(File::DataClass::Exception::Base);
 
@@ -25,6 +25,8 @@ sub new {
 
    my $args = @rest < 2 ? { error => $rest[ 0 ] } : { @rest };
 
+   __is_one_of_us( $args->{error} ) and return $args->{error};
+
    my ($leader, $line, $package); my $level = 3; $args->{level} ||= 3;
 
    do {
@@ -34,13 +36,10 @@ sub new {
 
    delete $args->{level};
 
-   if (__is_one_of_us( $args->{error} )) {
-      $args->{error}->{leader} = $leader; return $args->{error};
-   }
-
    $args->{error} .= q(); chomp $args->{error}; $args->{error} .= "\n";
 
    return $self->next::method( args           => [],
+                               class          => __PACKAGE__,
                                error          => 'Error unknown',
                                ignore_package => $IGNORE,
                                leader         => $leader,
