@@ -1,6 +1,8 @@
 Revision history for File::DataClass
 
 0.11.
+         - Add class attribute to F::DC::Exception
+         - F::DC::Storage::WithLanguage does not throw if no lang dep updates
          - Fixed F::Gettext::Storage::PO using name for msgid
          - Fixed gettext caching in F::DC::Storage::WithLanguage
          - Fixed bug in F::DC::HashMerge. Will update undef to 0
